RESOLVED FIXED142521
Scrollbars in overflow regions are not vanishing after scrolling
https://bugs.webkit.org/show_bug.cgi?id=142521
Summary Scrollbars in overflow regions are not vanishing after scrolling
Brent Fulgham
Reported 2015-03-09 19:19:59 PDT
For some reasons, regardless of system preference settings, the scroll bars for overflow regions containing scroll snap points are not vanishing after completing a scroll snap animation.
Attachments
Patch (4.81 KB, patch)
2015-05-13 09:40 PDT, Brent Fulgham
no flags
Patch (3.85 KB, patch)
2015-05-13 12:20 PDT, Brent Fulgham
darin: review+
Radar WebKit Bug Importer
Comment 1 2015-03-09 19:20:49 PDT
Brent Fulgham
Comment 2 2015-05-13 09:40:36 PDT
Brent Fulgham
Comment 3 2015-05-13 12:20:17 PDT
Brent Fulgham
Comment 4 2015-05-13 12:28:14 PDT
Brent Fulgham
Comment 5 2015-05-13 12:30:30 PDT
Brent Fulgham
Comment 6 2015-05-13 12:32:27 PDT
This was happening because we were never ending the scroll gesture. See patch for details. I originally thought this was specific to scroll-snap regions, but it was also happening for certain thin horizontal overflow regions. E.g., <http://stackoverflow.com/questions/1081381/iphone-hide-uitableview-search-bar-by-default>. Go to the top answer, scroll the code snippet horizontally. Prior to this patch, the scrollbar would not vanish. Note: If you place your mouse inside the scrollbar track (such that the scrollbar thickens) you are in a mode that holds the scrollbar visible until you move the mouse out of the region.
Note You need to log in before you can comment on or make changes to this bug.