Source/WebCore/platform/mac/ScrollAnimatorMac.mm
@@ -1091,16 +1091,18 @@ bool ScrollAnimatorMac::handleWheelEvent(const PlatformWheelEvent& wheelEvent)
     if (!wheelEvent.hasPreciseScrollingDeltas() || !rubberBandingEnabledForSystem())
         return ScrollAnimator::handleWheelEvent(wheelEvent);
 
-    // FIXME: This is somewhat roundabout hack to allow forwarding wheel events
-    // up to the parent scrollable area. It takes advantage of the fact that
-    // the base class implementation of handleWheelEvent will not accept the
-    // wheel event if there is nowhere to scroll.
-    if (fabsf(wheelEvent.deltaY()) >= fabsf(wheelEvent.deltaX())) {
-        if (!allowsVerticalStretching(wheelEvent))
-            return ScrollAnimator::handleWheelEvent(wheelEvent);
-    } else {
-        if (!allowsHorizontalStretching(wheelEvent))
-            return ScrollAnimator::handleWheelEvent(wheelEvent);
+    if (wheelEvent.deltaX() || wheelEvent.deltaY()) {
+        // FIXME: This is somewhat roundabout hack to allow forwarding wheel events
+        // up to the parent scrollable area. It takes advantage of the fact that
+        // the base class implementation of handleWheelEvent will not accept the
+        // wheel event if there is nowhere to scroll.
+        if (fabsf(wheelEvent.deltaY()) >= fabsf(wheelEvent.deltaX())) {
+            if (!allowsVerticalStretching(wheelEvent))
+                return ScrollAnimator::handleWheelEvent(wheelEvent);
+        } else {
+            if (!allowsHorizontalStretching(wheelEvent))
+                return ScrollAnimator::handleWheelEvent(wheelEvent);
+        }
     }
 
     bool didHandleEvent = m_scrollController.handleWheelEvent(wheelEvent);
